OpenHealth/force-app/main/default/force-app/main/default/objects/PatientBilling__c/PatientBilling__c.object-meta.xml
<CustomObject>
    <label>PatientBilling</label>
    <pluralLabel>PatientBillings</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>