OpenHealth/force-app/main/default/force-app/main/default/objects/PatientBilling__c/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <length>255</length>
</CustomField>