OpenHealth/force-app/main/default/force-app/main/default/objects/PatientBilling__c/Appointment__c__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c__c</fullName>
    <label>Appointment</label>
    <type>Lookup</type>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipName>Appointments</relationshipName>
</CustomField>