OpenHealth/force-app/main/default/force-app/main/default/objects/PatientBilling__c/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>DueDate</label>
    <type>Date</type>
    <length>255</length>
</CustomField>