OpenHealth/force-app/main/default/force-app/main/default/objects/PatientBilling__c/Patient__c__c.field-meta.xml
<CustomField>
    <fullName>Patient__c__c</fullName>
    <label>Patient</label>
    <type>Lookup</type>
    <referenceTo>Patient__c</referenceTo>
    <relationshipName>Patients</relationshipName>
</CustomField>